--- a/index.html
+++ b/index.html
@@ -1,76 +1,39 @@
 <html>
-  <head>
-    <title>Przepisy</title>
-    <style>
-      .dline {
-      line-height: 0.1em;
-      }
-      .column {
-      -webkit-column-width: 100px;
-      -moz-column-width: 100px;
-      column-width: 100px;
-      -webkit-column-count: 2;
-      -moz-column-count: 2;
-      column-count: 2;
-      -webkit-column-gap: 30px;
-      -moz-column-gap: 30px;
-      column-gap: 30px;
-      -webkit-column-rule: 1px solid #ccc;
-      -moz-column-rule: 1px solid #ccc;
-      column-rule: 1px solid #ccc;
-      }
-    </style>
-  </head>
-  <body>
-    <nav>
-      <a href="#">Glowna strona</a>
-      <a href="#">Wegan</a>
-      <a href="#">Drugie danie</a>
-      <a href="#">Deser</a>
-    </nav>
-    <h1 class="description">
-      <p align="center"><big><big><b>Drugie danie</b></big></big></p>
-    </h1>
-    <h2>
-      <p class="dline">Kaczka</p>
+  <header><p class="dline">Kaczka</p>
       <p class="dline">z pomaranczami i miodem</p>
-    </h2>
-    <section1>
-      <p>
+  </header>
+  <body>
+    <section class="pictures">
+      <div>
         <img src="meat.png" alt="mięsa z kaczki" width="300" height="200">
-        <img src="orange.png" alt="orange" hspace="300" width="200" height="200">
-        <img src="Honey.png" alt="Honey"  hspace="0" width="200" height="200">
-      </p>
-    </section1>
-    <section2>
-      <article>
-        <p>
-          <pre>      500 G MIĘSA Z KACZKI                                                           2 POMARANCZE EKOLOGICZNE                                                2 ŁYŻKI MIODU PŁYNNEGO</pre>
-        </p>  
-      </article>
-    </section2>
-    <article class="column">
-      <p>...ORAZ</p>
-      <ul><i>
-        <li>+1 cebula</li>
-        <li>+2 łyżki oliwy z oliwek</li>
-        <li>+1/2 drobiowej kostki bulionowej</li>
-        <li>+sól, pieprz</li></i>
-      </ul> 
-      <p><pre>
-
-      </pre></p>
-      <p><b>PRZYGOTOWANIE</b></p>
-      <ul>
-        <li>Cebulę obrać i pokroić na cienkie plasterki. W rondlu żeliwnym podgrzać oliwę i zaszklić cebulę. Dodać kawałki kaczki i z każdej strony przyrumienić. Zdjąć skórkę z jednej pomaranczy, wycisnąć sok z obu owoców.</li>
-        <li>Do kaczki dodać sok pomaranczowy, pokruszoną kostkę bulionową, posolić, popieprzyć, wlać szklankę wody i miód, następnie dodać pokrojoną skórkę pomaranczy. Rondel przykryć i na małym ogniu gotować 25 minut.</li>
-      </ul>     
-    </article>
-    <footer>
-      <p align="center">+48795257338</p>
-      <p align="center">POZDRAWIAM</p>
-    </footer>
-        
-      </h3>
+        <p>500 G MIĘSA Z KACZKI</p>
+      </div>
+      <div>
+        <img src="orange.png" alt="orange" width="200" height="200">
+        <p>2 POMARANCZE EKOLOGICZNE</p>
+      </div>
+      <div>
+        <img src="Honey.png" alt="Honey" width="200" height="200">
+        <p>2 ŁYŻKI MIODU PŁYNNEGO</p>
+      </div>
+    </section>
+    <section>
+      <div>
+        <h3>...ORAZ</h3>
+        <ul><i>
+          <li>+1 cebula</li>
+          <li>+2 łyżki oliwy z oliwek</li>
+          <li>+1/2 drobiowej kostki bulionowej</li>
+          <li>+sól, pieprz</li></i>
+        </ul>
+      </div>
+      <div>
+        <h3><b>PRZYGOTOWANIE</b></h3>
+        <ol>
+          <li>Cebulę obrać i pokroić na cienkie plasterki. W rondlu żeliwnym podgrzać oliwę i zaszklić cebulę. Dodać kawałki kaczki i z każdej strony przyrumienić. Zdjąć skórkę z jednej pomaranczy, wycisnąć sok z obu owoców.</li>
+          <li>Do kaczki dodać sok pomaranczowy, pokruszoną kostkę bulionową, posolić, popieprzyć, wlać szklankę wody i miód, następnie dodać pokrojoną skórkę pomaranczy. Rondel przykryć i na małym ogniu gotować 25 minut.</li>
+        </ol>
+      </div>
+    </section>
   </body>
 </html>
