--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
-  <header><p class="dline">Kaczka</p>
-      <p class="dline">z pomaranczami i miodem</p>
-  </header>
+  <head>
+    <link rel="stylesheet" href="./style.css">
+  </head>  
   <body>
+     <header>
+      <p class="dline">Kaczka</p>
+      <p class="dline">z pomaranczami i miodem</p>
+    </header>
     <section class="pictures">
       <div>
         <img src="meat.png" alt="mięsa z kaczki" width="300" height="200">
@@ -17,7 +21,7 @@
         <p>2 ŁYŻKI MIODU PŁYNNEGO</p>
       </div>
     </section>
-    <section>
+    <section class="content">
       <div>
         <h3>...ORAZ</h3>
         <ul><i>
